--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,51 +1,71 @@
 * {
-  font-family: "Roboto" sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
   transition: 0.3s;
   margin: 0%;
-  margin: 0%;
-  padding: 0%;
 }
 
 body {
-  color: #ffffff;
-  font-family: "Roboto", sans-serif;
-  margin: 0%;
-  padding: 0%;
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/assets/images/home_page.jpg");
+  margin: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/assets/images/main.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 0% 30%;
+  background-position: center center;
+  background-attachment: fixed;
+  position: relative;
+}
+
+.wrapper {
+  max-width: auto;
+  color: #ffffff;
+  margin: 0 auto;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 4em;
+}
+.logo svg {
+  width: 40px;
+  height: 40px;
+}
+.logo a {
+  font-size: 1.2em;
+  color: rgb(224, 224, 224);
+  text-decoration: none;
+  position: relative;
+}
+.logo a:before {
+  position: absolute;
+  content: "";
+  width: 0%;
+  height: 1px;
+  border-bottom: 2px solid rgb(161, 161, 161);
+  bottom: -6px;
+  transition: width 0.2s;
+}
+.logo a:hover:before {
+  width: 40%;
 }
 
 nav {
-  padding: 2%;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin: 4em;
 }
-nav .logo {
-  font-weight: 400;
-  font-size: 1.1em;
-}
-nav .logo a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-}
-nav .logo a span {
-  -webkit-transition: color 0.2s ease-out;
-  color: #CCA33D;
-}
-nav .logo a:hover span {
-  color: rgb(255, 255, 255);
-}
-nav .nav-ul {
+nav ul {
   width: 23em;
   display: flex;
   flex-direction: row;
@@ -53,30 +73,97 @@ nav .nav-ul {
   justify-content: space-between;
   list-style: none;
 }
-nav .nav-ul li a {
-  color: white;
+nav ul li a {
+  color: rgb(224, 224, 224);
   text-decoration: none;
-  cursor: pointer;
-  -webkit-transition: color 0.2s ease-out;
+  position: relative;
 }
-nav .nav-ul li a:hover {
-  color: #CCA33D;
+nav ul li a:before {
+  position: absolute;
+  content: "";
+  width: 0%;
+  height: 1px;
+  border-bottom: 2px solid rgb(161, 161, 161);
+  bottom: -6px;
+  transition: width 0.1s;
+}
+nav ul li a:hover:before {
+  width: 40%;
+}
+nav ul li a.active:before {
+  position: absolute;
+  content: "";
+  width: 45%;
+  height: 1px;
+  border-bottom: 2px solid rgb(161, 161, 161);
+  bottom: -6px;
 }
 
-.main-section {
-  margin-top: 6%;
+.welcome {
+  border: 2px solid red;
+  margin: 4em;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.welcome .welcome-title {
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+.welcome .welcome-title h2 {
+  font-weight: 700;
+  font-size: 3em;
+  color: rgb(224, 224, 224);
+  margin-bottom: -0.2em;
+}
+.welcome .welcome-title .subtitle {
+  font-weight: 700;
+  font-size: 1.5em;
+  color: rgb(224, 224, 224);
+}
+.welcome .welcome-details {
+  border: 2px solid red;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.welcome .welcome-details .details-info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: flex-start;
+}
+.welcome .welcome-details .details-info .details-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  pading: -1em;
+}
+.welcome .welcome-details .details-info .details-info-container svg {
+  border: 2px solid red;
+  width: 30px;
+  height: 30px;
+}
+.welcome .welcome-details .details-info .details-info-container .details-info-container-element {
+  border: 2px solid red;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin: 0;
 }
-.main-section .main-title {
+.welcome .welcome-details .details-info .details-info-container .details-info-container-element h4 {
+  border: 2px solid red;
   font-weight: 700;
-  font-size: 3em;
+  font-size: 0.8em;
+  color: rgb(224, 224, 224);
 }
-.main-section .subtitle {
-  font-weight: 700;
-  font-size: 1.5em;
+.welcome .welcome-details .details-info .details-info-container .details-info-container-element p {
+  border: 2px solid red;
 }
 
 .social-networks {
@@ -122,42 +209,9 @@ nav .nav-ul li a:hover {
 }
 .social-networks .social-container .social-rectangle:hover {
   background-color: #ffffff;
-  color: #CCA33D;
+  color: rgb(161, 161, 161);
   border-color: #666;
 }
 .social-networks .social-container .social-rectangle:focus {
   outline: none;
-}
-
-.logo {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  height: 20vh;
-  width: 15vw;
-}
-.logo svg {
-  width: 40px;
-  height: 40px;
-}
-.logo .text-container {
-  font-size: small;
-  border-left: 1px solid rgb(112, 112, 112);
-  display: flex;
-  padding-left: 10%;
-  flex-direction: column;
-  align-items: baseline;
-  justify-items: center;
-}
-.logo .text-container h1 a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-}
-.logo .text-container h1 a span {
-  -webkit-transition: color 0.2s ease-out;
-  color: #CCA33D;
-}
-.logo .text-container h1 a:hover span {
-  color: rgb(255, 255, 255);
 }/*# sourceMappingURL=index.css.map */
